BFS is too slow. Back to the drawing board.